typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserAmbiguity2.ts.stderr
error: UndefinedSymbol {
    sym: Atom('f' type=inline),
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            1,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserAmbiguity2.ts:1:1
  |
1 | f(g<A, B>7);
  | ^

error: UndefinedSymbol {
    sym: Atom('g' type=inline),
    span: Span {
        lo: BytePos(
            2,
        ),
        hi: BytePos(
            3,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserAmbiguity2.ts:1:3
  |
1 | f(g<A, B>7);
  |   ^

error: UndefinedSymbol {
    sym: Atom('A' type=inline),
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserAmbiguity2.ts:1:5
  |
1 | f(g<A, B>7);
  |     ^

error: UndefinedSymbol {
    sym: Atom('B' type=inline),
    span: Span {
        lo: BytePos(
            7,
        ),
        hi: BytePos(
            8,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserAmbiguity2.ts:1:8
  |
1 | f(g<A, B>7);
  |        ^

